Armature widgets have their transforms reset #34046

Closed
opened 2013-01-30 10:23:49 +01:00 by Beorn Leonard · 10 comments

%%%--- Operating System, Graphics card ---
Linux Mint 14
GeForce 9800 GT

- Blender version with error, and version that worked ---

The bug is in SVN r54196
It doesn't exist in 2.65a

- Short description of error ---

Custom shapes on an armature, when linked into a scene with the "At" field set for the custom shape, have their transforms reset when CTRL-Z is pressed.

Basically, if you are using another bone to position a custom bone shape, this seems to be reset as soon as CTRL-Z is pressed. The problem only seems present when the armature is a proxy. The problem also seems to depend on which bone was selected when the file was saved.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

In the attached zip file are 2 blend files. Open "linked_rig.blend", select "Bone.002" (the top right bone) and rotate it. Press CTRL-Z. The sphere widget snaps to another position.%%%

%%%--- Operating System, Graphics card --- Linux Mint 14 GeForce 9800 GT - Blender version with error, and version that worked --- The bug is in SVN r54196 It doesn't exist in 2.65a - Short description of error --- Custom shapes on an armature, when linked into a scene with the "At" field set for the custom shape, have their transforms reset when CTRL-Z is pressed. Basically, if you are using another bone to position a custom bone shape, this seems to be reset as soon as CTRL-Z is pressed. The problem only seems present when the armature is a proxy. The problem also seems to depend on which bone was selected when the file was saved. - Steps for others to reproduce the error (preferably based on attached .blend file) --- In the attached zip file are 2 blend files. Open "linked_rig.blend", select "Bone.002" (the top right bone) and rotate it. Press CTRL-Z. The sphere widget snaps to another position.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%I managed to find a fix for undo in proxy posing, it always went to restpose before (so 2.65a didn't "work" either :).
Will check on the examples here for custom bones.%%%

%%%I managed to find a fix for undo in proxy posing, it always went to restpose before (so 2.65a didn't "work" either :). Will check on the examples here for custom bones.%%%
Author

%%%I'm not sure if it helps, but the problem came up on the FlexRig.
The widgets for the hips, spine and torso get relocated when undoing anything in the latest SVN. (But only when it's linked)
http://www.blendswap.com/blends/view/61707%%%

%%%I'm not sure if it helps, but the problem came up on the FlexRig. The widgets for the hips, spine and torso get relocated when undoing anything in the latest SVN. (But only when it's linked) http://www.blendswap.com/blends/view/61707%%%
Author

%%%Hi Ton,
Sorry to bug you about this, but what is the chance that this will be fixed before the next release?
If it wont be, we're going to have to send out a warning email to our customers and users.%%%

%%%Hi Ton, Sorry to bug you about this, but what is the chance that this will be fixed before the next release? If it wont be, we're going to have to send out a warning email to our customers and users.%%%
Member

%%%Confirmed on my machine.

This breaks the usability of pretty much every rig I've made in Blender 2.5x+, including:

  • All of the rigs from Sintel
  • All of the non-trivial rigs in Humane Rigging
  • Almost any rig generated by Rigify
  • The FlexRig from the Animation Toolkit

This is a serious bug. Technically you can still use rigs with it, but in practice rigs are rendered very difficult and confusing to use.%%%

%%%Confirmed on my machine. This breaks the usability of pretty much every rig I've made in Blender 2.5x+, including: - All of the rigs from Sintel - All of the non-trivial rigs in Humane Rigging - Almost any rig generated by Rigify - The FlexRig from the Animation Toolkit This is a serious bug. Technically you can still use rigs with it, but in practice rigs are rendered very difficult and confusing to use.%%%
Member

%%%Yes its high prio, in past week my time was needed elsewhere.%%%

%%%Yes its high prio, in past week my time was needed elsewhere.%%%
Member

%%%Fix goes go svn. r54351

It was actually a bug in the original commit (r26600, april 2010), storing a pointer from the library bone into the local proxy.
That's strictly forbidden in Blender, but it never showed up because on every undo-redo a complete proxy-sync was called again. To allow undo/redo I had to disable this obsolete syncing, except for file load. Hence the feature got lost.

Mighty cool that it's such a simple fix, or rather - that I still understand the code ;)%%%

%%%Fix goes go svn. r54351 It was actually a bug in the original commit (r26600, april 2010), storing a pointer from the library bone into the local proxy. That's strictly forbidden in Blender, but it never showed up because on every undo-redo a complete proxy-sync was called again. To allow undo/redo I had to disable this obsolete syncing, except for file load. Hence the feature got lost. Mighty cool that it's such a simple fix, or rather - that I still understand the code ;)%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

%%%Fix confirmed on my machine (tested with the Sintel dragon).

Thanks a bunch Ton! :-)%%%

%%%Fix confirmed on my machine (tested with the Sintel dragon). Thanks a bunch Ton! :-)%%%
Author

%%%Thanks Ton!%%%

%%%Thanks Ton!%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34046
No description provided.