Bugfix #34046

Linked Armature with local proxy, using feature "Custom shape at other bone" stopped working
on undo/redo.

It was actually a bug in the original commit (r26600, april 2010), storing a pointer from 
the library bone into the local proxy bone.
That's strictly forbidden in Blender, but it never showed up because on every undo-redo a 
complete proxy-sync was called again. To allow undo/redo I had to disable this syncing, 
except for file load. Hence the feature got lost :)

The fix is simple; just store the pointer to its own local bone instead.